--- a/week2/SeSACWeek3/SeSACWeek3/Assignment/Setting.storyboard
+++ b/week2/SeSACWeek3/SeSACWeek3/Assignment/Setting.storyboard
@@ -335,6 +335,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="sNZ-UL-IYq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="sNZ-UL-IYq" firstAttribute="bottom" secondItem="blN-yU-VyG" secondAttribute="bottom" id="8cg-wx-zga"/>
                             <constraint firstItem="blN-yU-VyG" firstAttribute="top" secondItem="vx4-yI-kve" secondAttribute="bottom" constant="10" id="DhO-Ci-fAj"/>
@@ -346,6 +347,9 @@
                             <constraint firstItem="sNZ-UL-IYq" firstAttribute="trailing" secondItem="4K1-JZ-4an" secondAttribute="trailing" constant="10" id="jWK-EX-uv5"/>
                             <constraint firstItem="vx4-yI-kve" firstAttribute="top" secondItem="sNZ-UL-IYq" secondAttribute="top" constant="10" id="qD7-Ch-5xw"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="iMJ-CM-oCS" appends="YES" id="qeJ-P1-H6H"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="쇼핑" id="1bj-YS-ufT"/>
                     <connections>
@@ -354,6 +358,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WLk-0A-XOU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="iMJ-CM-oCS">
+                    <connections>
+                        <action selector="tapGestureTapped:" destination="dpk-Nm-2HY" id="dIl-ti-ndy"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1072.5190839694656" y="1409.8591549295775"/>
         </scene>
