feat: keyboard dismiss

--- a/week2/SeSACWeek3/SeSACWeek3/Assignment/Setting.storyboard
+++ b/week2/SeSACWeek3/SeSACWeek3/Assignment/Setting.storyboard
@@ -282,7 +282,7 @@
                                     <action selector="addBtnClicked:" destination="dpk-Nm-2HY" eventType="touchUpInside" id="Y6v-ae-Nff"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="blN-yU-VyG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="blN-yU-VyG">
                                 <rect key="frame" x="0.0" y="157" width="393" height="661"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
